--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "punto-de-pago-air-frontend",
   "private": true,
   "version": "0.0.0",
+  "proxy": "https://cantozil.pythonanywhere.com",
   "type": "module",
   "scripts": {
     "dev": "vite",
