--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
+    "react-datepicker": "^7.5.0",
+    "react-day-picker": "^9.4.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
